--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
